<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:showDividers="middle">

    <Button
        android:id="@+id/speechScreenBtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/start_speech" />

    <Button
        android:id="@+id/figuresScreenBtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/start_figures" />

    <Button
        android:id="@+id/gridScreenBtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/start_grid" />
</LinearLayout>