<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    android:soundEffectsEnabled="false">

    <RadioGroup
        android:id="@+id/figureTypes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/figureView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/figureTypeCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/figures_circle" />

        <RadioButton
            android:id="@+id/figureTypeTriangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/figures_triangle" />

        <RadioButton
            android:id="@+id/figureTypeSquare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/figures_square" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@+id/figureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/figureTypes"
        app:layout_constraintTop_toTopOf="parent" />


    <com.accessibility.testapp.ui.widget.figureView.FigureView
        android:id="@+id/figureView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/figureTypes"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:touch_distance="10dp" />

</android.support.constraint.ConstraintLayout>